PLA-833 fix for hiding too long article names

--- a/extensions/wikia/Suggestions/css/Suggestions.scss
+++ b/extensions/wikia/Suggestions/css/Suggestions.scss
@@ -116,6 +116,7 @@ $image-width: 55px;
 		bottom: 0;
 		height: 70%;
 		margin: auto;
+		overflow: hidden;
 		position: absolute;
 		top: 0;
 	}
